Added dynamic data center config
